# TIK

./: .gitignore  01-project-context.mdc  02-unity-architecture.mdc  03-scene-config.mdc  04-audion-backend.mdc  LICENSE  README.md  act_blueprint.v1.schema.json  audion-persona-to-scene.openapi.yaml  narrative_manifest.v1.schema.json  no-unity-runtime.mdc  package-lock.json  package.json  persona_inputs.v1.schema.json  persona_profile.v1.schema.json  scene_config.v1.schema.json  unity-project-skeleton.md
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt
backend/app/: main.py
backend/app/persona_reality/: __init__.py  router.py  schemas.py  service.py
backend/app/pipeline/: __init__.py  act_agent.py  act_content.py  artifacts.py  claude.py  config.py  elevenlabs_tts.py  environment_plate.py  finalize.py  google_image.py  narrative_previews_step.py  normalize_act.py  normalize_profile.py  persona_agent.py  persona_id.py  registry.py  resume.py  router.py  runner.py  schema_validate.py  schemas.py  store.py  subprocess_runner.py  voiceover_audio.py  worlds_step.py
backend/tests/: conftest.py  test_act_content_api.py  test_environment_plate.py  test_finalize_worlds.py  test_google_image.py  test_job_retry.py  test_list_jobs.py  test_narrative_previews.py  test_normalize_act.py  test_normalize_contract.py  test_normalize_profile.py  test_persona_id.py  test_persona_reality_sessions.py  test_pipeline_api.py  test_pipeline_runner.py  test_schema_validate.py  test_store.py  test_voiceover_audio.py  test_worlds_prompt.py
knowledge/: audion-sync.md  (+16 more)
(+279 files in other folders)
