[project]
name = "persona-reality-api"
version = "1.0.0"
description = "Persona Reality session composer API (/v1) — MSQ DX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.123.9",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.10.4",
    "jsonschema==4.23.0",
    "httpx>=0.28.1,<1.0.0",
    "google-genai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: full pipeline e2e (mocked Claude); skip in default CI",
]
